deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demomicroprofile
  labels:
    app: demomicroprofile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demomicroprofile
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33%
  template:
    metadata:
      labels:
        app: demomicroprofile
    spec:
      containers:
        - name: demomicroprofile
          image: kaiiiiii/<IMAGENAME>
          ports:
            - containerPort: 8010
          livenessProbe:
            httpGet:
              path: /health
              port: 8010
            initialDelaySeconds: 30
