service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demomicroprofileservice
spec:
  selector:
    app: demomicroprofile
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30225
